# forest-explorer

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  instructions.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py
backend/app/ingestion/: fia_loader.py  prism_loader.py  tiger_loader.py
backend/app/models/: fia.py
backend/app/schemas/: carbon.py
backend/app/services/: carbon.py  qa_engine.py
backend/dbt/: .user.yml  dbt_project.yml  profiles.yml
backend/dbt/macros/: carbon_conversions.sql
backend/dbt/models/marts/: mart_carbon_by_species.sql  mart_plot_carbon_density.sql  schema.yml
backend/dbt/models/staging/: schema.yml  stg_county_boundaries.sql  stg_fia_conditions.sql  stg_fia_plots.sql  stg_fia_trees.sql  stg_prism_normals.sql
backend/dbt/seeds/: species_ref.csv
backend/tests/: conftest.py  test_carbon_service.py  test_fia_loader.py  test_health.py  test_qa_engine.py
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: SpeciesChart.vue  StatCard.vue  StateSelector.vue
frontend/src/composables/: useApi.js
frontend/src/router/: index.js
frontend/src/stores/: carbon.js
frontend/src/views/: DashboardView.vue  MapView.vue  QAView.vue
scripts/: audit_endpoints.py  init-db.sql
